--- a/client/src/app/modules/blog/components/dialogs/edit-article-dialog/edit-article-dialog.component.html
+++ b/client/src/app/modules/blog/components/dialogs/edit-article-dialog/edit-article-dialog.component.html
@@ -62,10 +62,15 @@
 </main>
 
 <footer class="dialog-actions">
-  <button mat-button mat-dialog-close class="btn btn-secondary">
+  <button
+    mat-button
+    mat-dialog-close
+    class="btn btn-secondary"
+    (click)="clear()"
+  >
     <span>Clear</span>
   </button>
-  <button mat-button class="btn btn-primary">
+  <button mat-button class="btn btn-primary" (click)="save()">
     <span>Save</span>
   </button>
 </footer>
