--- a/client/src/app/modules/blog/components/dialogs/settings-dialog/settings-dialog.component.html
+++ b/client/src/app/modules/blog/components/dialogs/settings-dialog/settings-dialog.component.html
@@ -36,3 +36,12 @@
     </mat-tab>
   </mat-tab-group>
 </main>
+
+<footer class="dialog-actions">
+  <button mat-button class="btn btn-secondary" (click)="cancel()">
+    <span>Cancel</span>
+  </button>
+  <button mat-button class="btn btn-primary" (click)="save()">
+    <span>Save</span>
+  </button>
+</footer>
