--- a/client/src/app/modules/blog/pages/dashboard/dashboard.component.html
+++ b/client/src/app/modules/blog/pages/dashboard/dashboard.component.html
@@ -35,7 +35,7 @@
       </mat-list-option>
     </mat-selection-list>
     <mat-divider></mat-divider>
-    <footer>
+    <footer class="sidenav-footer">
       <button mat-icon-button (click)="settings()">
         <mat-icon>settings</mat-icon>
       </button>
