--- a/client/src/app/modules/blog/pages/dashboard/dashboard.component.scss
+++ b/client/src/app/modules/blog/pages/dashboard/dashboard.component.scss
@@ -1,35 +1,7 @@
 @import "mixins";
 @import "toolbar";
 @import "material";
-
-.sidenav-container {
-  width: 100%;
-  height: 100%;
-  min-height: 100vh;
-}
-
-.sidenav {
-  min-width: 320px;
-  border-right: 1px solid #e9e9e9;
-}
-
-.sidenav-header {
-  height: 63px;
-  display: flex;
-  align-items: center;
-  padding: 0 15px;
-  box-sizing: border-box;
-}
-
-.sidenav-content {
-  width: 100%;
-  height: 100%;
-  max-width: calc(100vw - 320px);
-  max-height: 100vh;
-  overflow: hidden;
-  display: grid;
-  grid-template-rows: auto 1fr;
-}
+@import "../stylesheets/layout.scss";
 
 .main-content {
   display: flex;
