--- a/client/src/app/pages/home/about/about.component.html
+++ b/client/src/app/pages/home/about/about.component.html
@@ -12,7 +12,9 @@
         I am currently working as a junior developer on placement at
         <a href="">Bluefuse Systems</a>, as part of my undergraduate's degree in
         Computer Science at the <a href="">University of Bath</a>. I'm
-        passionate about web development and web design.
+        passionate about web development and web design, and always enjoy
+        working on new and interesting projects that give me the oppurtunity to
+        create and deliver value to real people.
       </p>
     </div>
   </div>
