--- a/client/src/app/pages/home/blog/blog.component.html
+++ b/client/src/app/pages/home/blog/blog.component.html
@@ -7,6 +7,18 @@
       </h3>
       <h2>My Blog</h2>
     </div>
-    <div class="section-content"></div>
+    <div class="section-content">
+      <div class="search-container"></div>
+      <div class="pancake">
+        <ng-container *ngFor="let article of articles">
+          <app-blog-post [data]="article"></app-blog-post>
+        </ng-container>
+      </div>
+    </div>
+    <div class="section-actions">
+      <button mat-button class="btn btn-primary" routerLink="/blog">
+        <span>View Blog</span>
+      </button>
+    </div>
   </div>
 </section>
