--- a/client/src/app/pages/home/blog/blog.component.scss
+++ b/client/src/app/pages/home/blog/blog.component.scss
@@ -1,1 +1,14 @@
 @import "../home-shared.scss";
+
+.articles {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem 0;
+}
+
+.section-actions {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 4rem;
+}
