--- a/client/src/app/pages/home/contact/contact.component.html
+++ b/client/src/app/pages/home/contact/contact.component.html
@@ -9,27 +9,25 @@
     </div>
     <div class="section-content">
       <form [formGroup]="contactForm">
-        <mat-form-field appearance="fill">
+        <mat-form-field>
           <mat-label>Name</mat-label>
           <input matInput type="text" formControlName="name" />
-          <mat-error>This field is required.</mat-error>
         </mat-form-field>
-        <mat-form-field appearance="fill">
+        <mat-form-field>
           <mat-label>Email</mat-label>
           <input matInput type="text" formControlName="email" />
-          <mat-error>This field is required.</mat-error>
-          <mat-error>Email is invalid.</mat-error>
         </mat-form-field>
-        <mat-form-field appearance="fill">
+        <mat-form-field>
           <mat-label>Subject</mat-label>
           <input matInput type="text" formControlName="subject" />
-          <mat-error>This field is required.</mat-error>
         </mat-form-field>
-        <mat-form-field appearance="fill">
+        <mat-form-field>
           <mat-label>Description</mat-label>
           <textarea matInput formControlName="description"></textarea>
-          <mat-error>This field is required.</mat-error>
         </mat-form-field>
+        <button mat-button class="btn btn-primary">
+          <span>Submit</span>
+        </button>
       </form>
     </div>
   </div>
