--- a/client/src/app/pages/home/portfolio/project/project.component.scss
+++ b/client/src/app/pages/home/portfolio/project/project.component.scss
@@ -4,10 +4,51 @@
   grid-template-rows: 1fr;
   align-items: center;
   grid-gap: 0 1rem;
+  background-color: white;
+  border-radius: 6px;
+  border: 1px solid #eee;
+  -webkit-box-shadow: 0px 4px 6px rgb(134 151 168 / 10%);
+  box-shadow: 0px 4px 6px rgb(134 151 168 / 10%);
+  -webkit-transition: all 0.3s ease-in;
+  transition: all 0.3s ease-in;
+}
+
+.project-details {
+  padding: 0.5rem;
+}
+
+.project-title-container {
+  display: grid;
+  grid-template-columns: 1fr auto auto;
+  grid-template-rows: 1fr;
+  align-items: center;
 }
 
 .project-thumbnail {
   width: 200px;
   height: 200px;
   background-color: black;
+  position: relative;
+}
+
+.project-thumbnail .overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-items: center;
+  background-color: rgba(255, 255, 255, 0.8);
+  opacity: 0;
+  will-change: opacity;
+  transition: opacity 0.5s ease-in-out;
+  cursor: pointer;
+  user-select: none;
+}
+
+.project-thumbnail:hover .overlay {
+  opacity: 1;
 }
